--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 
 <link rel="stylesheet" type="text/css" href="resources/css/style.css">
-
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@1,300&family=Oswald:wght@300&display=swap" rel="stylesheet">
 
 
 </head>
@@ -15,9 +17,7 @@
         <p> The champion of civil rights</p>
             <figure class="image">
                 <img class="mlk-picture" src="resources/img/Martin-Luther-King-Jr.jpg" alt="Dr. King speaking to people">
-                    <figcaption>"I have a dream."</figcaption>
-
-
+                    <figcaption class="caption">"I have a dream."</figcaption>
             </figure>
 
 
@@ -25,12 +25,6 @@
 
 
 </main>
-
-
-
-
-
-
 
 
 </body>
