--- a/index.html
+++ b/index.html
@@ -3,21 +3,19 @@
 <head>
 
 <link rel="stylesheet" type="text/css" href="resources/css/style.css">
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@1,300&family=Oswald:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,600;0,700;1,200&display=swap" rel="stylesheet">
 
 
 </head>
 <html lang="en">
 <title>Martin Luther King Jr.</title>
 <body>
-<main> 
-    <h1>Dr. Martin Luther King </h1>
+<main id="main"> 
+    <h1 id="title">Dr. Martin Luther King </h1>
         <p> The champion of civil rights</p>
-            <figure class="image">
-                <img class="mlk-picture" src="resources/img/Martin-Luther-King-Jr.jpg" alt="Dr. King speaking to people">
-                    <figcaption class="caption">"I have a dream."</figcaption>
+            <figure id="image">
+                <img id="mlk-picture" src="resources/img/Martin-Luther-King-Jr.jpg" alt="Dr. King speaking to people">
+                    <figcaption id="img-caption">"Dr. King speaking to supporters in Washington D.C"</figcaption>
             </figure>
 
 
