--- a/index.html
+++ b/index.html
@@ -13,12 +13,27 @@
 <main id="main"> 
     <h1 id="title">Dr. Martin Luther King </h1>
         <p> The champion of civil rights</p>
-            <figure id="image">
+            <figure id="img-div">
                 <img id="mlk-picture" src="resources/img/Martin-Luther-King-Jr.jpg" alt="Dr. King speaking to people">
                     <figcaption id="img-caption">"Dr. King speaking to supporters in Washington D.C"</figcaption>
             </figure>
+            <section id="tribute-info"> 
+                <h3>Time line of Dr. King</h3> 
+                <ul id="timeline"> 
+                    <li><strong>1929: Martin Luther King. Jr is born in Atlanta to teacher Alberta King and Baptist minister Michael Luther King</strong> </li>
+                    <li><strong>1944:</strong> Graduates high school at age 15, enters Morehouse College shortly thereafter. </li>
+                    <li><strong>1929:</strong> Receives BA in sociology from Morehouse college at age 19</li>
+                    <li><strong>1929:</strong> Receives degree from Crozer Theological Seminary (Chester, PA), enrolls in Boston University Ph.D program.</li>
+                    <li><strong>1929:</strong> </li>
+                    <li><strong>1929:</strong> </li>
+                    <li><strong>1929:</strong> </li>
+                    <li><strong>1929:</strong> </li>
+                    <li><strong>1929:</strong> </li>
+                </ul>
 
 
+
+            </section>
 
 
 
