--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <title>Martin Luther King Jr.</title>
 <body>
 <main id="main"> 
-    <h1 id="title">Dr. Martin Luther King </h1>
+    <div class="intro">
+     <h1 id="title">Dr. Martin Luther King </h1>
         <p> The champion of civil rights</p>
+        </div>
             <figure id="img-div">
                 <img id="mlk-picture" src="resources/img/Martin-Luther-King-Jr.jpg" alt="Dr. King speaking to people">
                     <figcaption id="img-caption">"Dr. King speaking to supporters in Washington D.C"</figcaption>
@@ -20,15 +22,15 @@
             <section id="tribute-info"> 
                 <h3>Time line of Dr. King</h3> 
                 <ul id="timeline"> 
-                    <li><strong>1929: Martin Luther King. Jr is born in Atlanta to teacher Alberta King and Baptist minister Michael Luther King</strong> </li>
-                    <li><strong>1944:</strong> Graduates high school at age 15, enters Morehouse College shortly thereafter. </li>
-                    <li><strong>1929:</strong> Receives BA in sociology from Morehouse college at age 19</li>
-                    <li><strong>1929:</strong> Receives degree from Crozer Theological Seminary (Chester, PA), enrolls in Boston University Ph.D program.</li>
-                    <li><strong>1929:</strong> </li>
-                    <li><strong>1929:</strong> </li>
-                    <li><strong>1929:</strong> </li>
-                    <li><strong>1929:</strong> </li>
-                    <li><strong>1929:</strong> </li>
+                    <li><strong>1929:</strong> Martin Luther King. Jr is born in Atlanta to teacher Alberta King and Baptist minister Michael Luther King </li><br>
+                    <li><strong>1944:</strong> Graduates high school at age 15, enters Morehouse College shortly thereafter. </li><br>
+                    <li><strong>1948:</strong> King is ordained and appointed assistant pastor at Ebenezer Baptist Church in Atlanta</li><br>
+                    <li><strong>1951:</strong> King begins his graduate studies in systematic theology at Boston University.</li><br>
+                    <li><strong>1953:</strong> King and Coretta Scott are married at the Scott home near Marion, Alabama.</li><br>
+                    <li><strong>1957:</strong> Southern black ministers meet in Atlanta to share strategies in the fight against segregation. King is named chairman of the Southern Negro Leaders Conference on Transporation and Nonviolent ingegration.</li><br>
+                    <li><strong>1964:</strong> King is named "Man of the Year" by Time Magazine. </li><br>
+                    <li><strong>1965:</strong> Votring rights marchers are beaten in an event called "Bloody Sunday" </li><br>
+                    <li><strong>1968:</strong> King is shot and killed while standing on the balcony of the Lorraine Motel in Memphis.</li><br>
                 </ul>
 
 
