--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <title>Martin Luther King Jr.</title>
 <body>
 <main id="main"> 
-    <div class="intro">
-     <h1 id="title">Dr. Martin Luther King </h1>
-        <p> The champion of civil rights</p>
+    <div class="header"></div>
+        <div class="upper">
+            <h1 id="title">Dr. Martin Luther King </h1>
+            <p> The champion of civil rights</p>
+            </div>
         </div>
             <figure id="img-div">
                 <img id="mlk-picture" src="resources/img/Martin-Luther-King-Jr.jpg" alt="Dr. King speaking to people">
