--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
                     <li><strong>1965:</strong> Votring rights marchers are beaten in an event called "Bloody Sunday" </li><br>
                     <li><strong>1968:</strong> King is shot and killed while standing on the balcony of the Lorraine Motel in Memphis.</li><br>
                 </ul>
-
+                <blockquote cite="https://www.keepinspiring.me/martin-luther-king-jr-quotes/">
+                    
+                <p>“Shallow understanding from people of good will is more frustrating than absolute misunderstanding from people of ill will.”</p>
+                <cite>Dr. Martin Luther King Jr</cite>
+                </blockquote>
+                <h3>To learn more about this great man, you can view his <a href="https://en.wikipedia.org/wiki/Martin_Luther_King_Jr.">Wikipedia entry</a></h3>
 
 
             </section>
