--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
         </div>
             <figure id="img-div">
-                <img id="mlk-picture" src="resources/img/Martin-Luther-King-Jr.jpg" alt="Dr. King speaking to people">
+                <img id="image" src="resources/img/Martin-Luther-King-Jr.jpg" alt="Dr. King speaking to people">
                     <figcaption id="img-caption">"Dr. King speaking to supporters in Washington D.C"</figcaption>
             </figure>
             <section id="tribute-info"> 
@@ -39,7 +39,7 @@
                 <p>“Shallow understanding from people of good will is more frustrating than absolute misunderstanding from people of ill will.”</p>
                 <cite>Dr. Martin Luther King Jr</cite>
                 </blockquote>
-                <h3>To learn more about this great man, you can view his <a href="https://en.wikipedia.org/wiki/Martin_Luther_King_Jr.">Wikipedia entry</a></h3>
+                <h3>To learn more about this great man, you can view his <a href="https://en.wikipedia.org/wiki/Martin_Luther_King_Jr." id="tribute-link" target="_blank">Wikipedia entry</a></h3>
 
 
             </section>
@@ -52,4 +52,6 @@
 </body>
 
 </html>
+
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </html>
