--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="upper">
             <h1 id="title">Dr. Martin Luther King </h1>
             <p> The champion of civil rights</p>
-            test div
+            test div; testing the test div
             </div>
         </div>
             <figure id="img-div">
